<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F3EFEF"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:text="@string/hello"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:layout_width="62dp"
        android:layout_height="57dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="13dp"
        android:background="@drawable/ic_baseline_person_24"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/burger_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/burger"
        android:textColor="#733F0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/burger"
        app:layout_constraintTop_toTopOf="@+id/burger" />

    <ImageView
        android:id="@+id/peperoni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/place"
        tools:layout_editor_absoluteY="134dp"
        app:layout_constraintTop_toBottomOf="@+id/navbar"/>

    <TextView
        android:id="@+id/peperoni_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/paperoni"
        android:textColor="#733F0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/peperoni"
        app:layout_constraintTop_toTopOf="@+id/peperoni" />

    <ImageView
        android:id="@+id/spagheti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peperoni"
        app:srcCompat="@drawable/spaghetti" />

    <TextView
        android:id="@+id/spagheti_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/spaghetti"
        android:textColor="#733F0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spagheti"
        app:layout_constraintTop_toTopOf="@+id/peperoni_name" />

    <ImageView
        android:id="@+id/burger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spagheti"
        app:srcCompat="@drawable/burger" />

    <TextView
        android:id="@+id/steak_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/steak"
        android:textColor="#733F0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/steak"
        app:layout_constraintTop_toTopOf="@+id/steak" />

    <ImageView
        android:id="@+id/steak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burger"
        app:srcCompat="@drawable/steak" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="616dp"
        app:layout_constraintTop_toBottomOf="@+id/steak"/>


</androidx.constraintlayout.widget.ConstraintLayout>